# anvil

./: .gitignore  .prettierignore  AGENTS.md  README.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: fresh-checkout.yml
desktop/: Cargo.toml  tauri.conf.json
desktop/capabilities/: default.json
desktop/icons/: icon.icns
desktop/src/: lib.rs  main.rs
desktop/src/runtime/: agent.rs  agentic_plan.rs  app.rs  app_server.rs  diff.rs  external.rs  git.rs  metadata.rs  mod.rs  process.rs  provider_cache.rs  review.rs  scm.rs  session.rs  types.rs  util.rs
docs/: README.md  agentic-review-pipeline.md  anvil-brand-direction.md  experience-layer-workflow.md  review-pipeline-evals.md  review-pipeline-product-contract.md  review-plan.schema.json
e2e/: fixtures.ts  playwright.config.ts  playwright.tauri.config.ts
e2e/tests/: native-review-preparation.spec.ts  review-inbox.spec.ts
evals/review-plans/: manifest.json  schema.test.ts  scorers.test.ts  scorers.ts
scripts/: tauri-smoke.sh
skills/anvil-slice-review/: SKILL.md
ui/: main.tsx  styles.css
ui/app/: App.tsx  AppErrorBoundary.tsx  AppShell.tsx  DecisionRailPanel.tsx  ExperiencePrototype.tsx  LauncherScreen.test.tsx  LauncherScreen.tsx  PreparingScreen.tsx  ReviewCompleteState.tsx  ReviewQueueWorkbench.tsx  ReviewScreen.tsx  ReviewWorkspaceScreen.tsx  SettingsScreen.tsx  SliceReviewPanel.test.tsx  SliceReviewPanel.tsx  brand.ts  experience-prototype-data.ts  review-preparation.test.ts  review-preparation.ts  types.ts  (+5 more)
(+45 files in other folders)
