[package]
name = "anvil-review"
version = "0.1.0"
description = "Desktop shell for Anvil"
authors = ["Anvil"]
edition = "2021"
default-run = "anvil-review"

[features]
e2e-testing = []

[lib]
name = "anvil_review_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-playwright = "0.2.2"
tauri-plugin-http = { version = "2", features = ["blocking", "json"] }
